# RGM_controller

./: trajectory_common.py
kollmorgen/: .gitignore  CMakeLists.txt  build.sh  kollmorgen.c  kollmorgen.h  setup.bash  ssh使用说明
kollmorgen/canopen/: CMakeLists.txt
kollmorgen/canopen/drivers/: CMakeLists.txt
kollmorgen/canopen/drivers/can_socket/: CMakeLists.txt
kollmorgen/canopen/drivers/timers_unix/: timers_unix.c
kollmorgen/canopen/drivers/unix/: CMakeLists.txt
kollmorgen/canopen/ftsensor/: CMakeLists.txt  ftsensor.c  ftsensor.h
kollmorgen/canopen/rgm6/: CMakeLists.txt  Master.c  Master.h  TestMaster.c  TestMaster.h  fb_src.c  fb_src.h  pvt_src.c  pvt_src.h  rgm6.c  rgm6.h  rgm_src.c  rgm_src.h
kollmorgen/canopen/src/: CMakeLists.txt  TestMaster.c  TestMaster.h  sdo.c  sync.c
kollmorgen/canopen/tcp/: CMakeLists.txt  rgmtcp.c  rgmtcp.h
kollmorgen/orocos_kinematics_alter/: CMakeLists.txt
kollmorgen/orocos_kinematics_alter/examples/: RGMtrajTest.cpp  RGMtrajTest0.c  ptmode.hpp  puma560test.cpp
kollmorgen/orocos_kinematics_alter/models/: CMakeLists.txt  models.hpp  puma560.cpp  ur5.cpp
kollmorgen/orocos_kinematics_alter/src/: CMakeLists.txt  RGMcontrol.hpp  RGMcontrol.inl  RGMikControl.cpp  RGMikControl.hpp  RGMtrajControl.cpp  RGMtrajControl.hpp  chainfksolverpos_rgm.cpp  chainfksolverpos_rgm.hpp  chainiksolverpos_nr.hpp  chainiksolverpos_rgm.cpp  chainiksolverpos_rgm.hpp  chainiksolvervel_pinv_nso.hpp  chainsfunc.cpp  chainsfunc.hpp  velocityprofile_rect.cpp
kollmorgen/orocos_kinematics_alter/src/utilities/: CMakeLists.txt  utility.h
kollmorgen/test/: model_test.cpp  sfunctest.cpp
